# AdventOfCode2024

./: .gitignore  README.md
Python3/: linters.sh  pyproject.toml
Python3/aoc24/: __main__.py  solution.py
Python3/aoc24/day00/: __init__.py  example.py
Python3/aoc24/day01/: __init__.py  day01.py  parse.py  solve.py
Python3/aoc24/day02/: __init__.py  day02.py  parse.py  solve.py
Python3/aoc24/day03/: __init__.py  day03.py  instruction.py  parse.py  solve.py
Python3/aoc24/day17/: __init__.py  _find.py  day17.py  program.py  solve.py
Python3/aoc24/day21/: __init__.py  day21.py  direction.py  solve.py
Rust/: Cargo.toml
Rust/src/: aoc.rs  cli.rs  lib.rs  main.rs
Rust/src/day00/: mod.rs
Rust/src/day01/: mod.rs  parse.rs  solve.rs
Rust/src/day02/: mod.rs  parse.rs  solve.rs
Rust/src/day03/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day04/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day05/: mod.rs  parse.rs  solve.rs
Rust/src/day06/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day07/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day08/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day09/: mod.rs  model.rs  solve.rs
Rust/src/day10/: mod.rs  parse.rs  solve.rs
Rust/src/day11/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day12/: mod.rs  model.rs  solve.rs
Rust/src/day13/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day14/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day15/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day16/: dijkstra.rs  mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day17/: mod.rs  model.rs  parse.rs  reversed.rs  solve.rs
Rust/src/day18/: dijkstra.rs  mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day19/: mod.rs  parse.rs  solve.rs
Rust/src/day20/: compute.rs  dijkstra.rs  mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day21/: instructions.rs  keypads.rs  mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day22/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day23/: mod.rs  parse.rs  solve.rs
Rust/src/day24/: graph.dot  mod.rs  model.rs  parse.rs  solve.rs
Rust/src/day25/: mod.rs  model.rs  parse.rs  solve.rs
Rust/src/toolbox/: collection_hashmap.rs  coordinates.rs  directions.rs  grid.rs  iterators.rs  maths.rs  mod.rs  parsing.rs
scripts/: colordiff.ps1
