[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "~4.4.0", features = ["derive"] }
colored = "2.2.0"
faer = { version = "0.19.4", default-features = false }
#indicatif = "0.17.9"
instant = { version = "0.1.13", optional = true }
itertools = "0.13.0"
nom = "7.1.3"
once_cell = "1.20.2"
rayon = "1.10.0"
regex = "1.11.1"

[features]
benchmark = ["dep:instant"]
